external-crates/move/crates/move-compiler/tests/move_2024/typing/duplicate_defines_primitive.move
#[defines_primitive(signer)]
module a::m {}

#[defines_primitive(signer)]
module a::n {}

#[defines_primitive(u64)]
module a::x {}
